--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,4 @@
-# Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
-
-# Test binary, built with "go test -c"
-*.test
-
-tmp/
-
-# .env file
+tmp
 .env
 
 # Project build
@@ -18,3 +6,6 @@ main
 
 # sqlite db
 *.db
+
+# py virtual env
+*.venv
