--- a/classification/requirements.txt
+++ b/classification/requirements.txt
@@ -1,40 +1,102 @@
+annotated-types==0.7.0
+appdirs==1.4.4
+attrs==23.2.1.dev0
+autocommand==2.2.2
+b4==0.13.0
+beautifulsoup4==4.12.3
+btrfsutil==6.8.1
+CacheControl==0.14.0
+cattrs==23.2.3
 certifi==2024.6.2
+cffi==1.16.0
+chardet==5.2.0
 charset-normalizer==3.3.2
-filelock==3.14.0
-fsspec==2024.6.0
-grpcio==1.64.1
-grpcio-tools==1.64.1
-huggingface-hub==0.23.3
-idna==3.7
-Jinja2==3.1.4
-MarkupSafe==2.1.5
-mpmath==1.3.0
-networkx==3.3
+ConfigArgParse==1.5.5
+contourpy==1.2.1
+coverage==7.5.1
+crit==3.18
+cryptography==42.0.6
+cssselect==1.2.0
+cycler==0.12.1
+Cython==3.0.10
+dbus-python==1.3.2
+discid==1.2.0
+distro==1.9.0
+docstring-to-markdown==0.15
+evdev==1.7.0
+fasteners==0.19
+fastjsonschema==2.19.1
+filelock==3.13.3
+fonttools==4.53.0
+git-filter-repo==2.38.0
+idna==3.6
+inflect==7.2.1
+jaraco.context==4.3.0
+jaraco.functools==4.0.1
+jaraco.text==3.12.0
+jedi==0.19.1
+kiwisolver==1.4.5
+lensfun==0.3.4
+libfdt==1.7.0
+lockfile==0.12.2
+lsprotocol==2023.0.1
+lxml==5.2.2
+Markdown==3.6
+matplotlib==3.8.3
+meson==1.4.1
+moddb==0.11.0
+more-itertools==10.2.0
+msgpack==1.0.5
+mutagen==1.47.0
+nftables==0.1
 numpy==1.26.4
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==8.9.2.26
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.20.5
-nvidia-nvjitlink-cu12==12.5.40
-nvidia-nvtx-cu12==12.1.105
+ordered-set==4.1.0
 packaging==24.0
-protobuf==5.27.1
-python-dotenv==1.0.1
+parso==0.8.4
+patatt==0.6.3
+picard==2.11
+pillow==10.3.0
+platformdirs==4.2.0
+pluggy==1.5.0
+ply==3.11
+protobuf==4.25.3
+pycairo==1.26.0
+pycparser==2.22
+pydantic==2.7.3
+pydantic_core==2.18.4
+pygls==1.3.1
+Pygments==2.17.2
+PyGObject==3.48.2
+PyJWT==2.8.0
+PyNaCl==1.5.0
+pyparsing==3.1.2
+PyQt5==5.15.10
+PyQt5_sip==12.13.0
+pyrate-limiter==3.6.0
+pyserial==3.5
+python-dateutil==2.9.0
+python-distutils-extra==2.39
+python-lsp-jsonrpc==1.1.2
+python-lsp-server==1.11.0
 PyYAML==6.0.1
-regex==2024.5.15
+Reflector==2023.6.28.0.36.1
 requests==2.32.3
-safetensors==0.4.3
-setuptools==70.0.0
-sympy==1.12.1
-tokenizers==0.19.1
-torch==2.3.1
-tqdm==4.66.4
-transformers==4.41.2
-typing_extensions==4.12.2
-urllib3==2.2.1
+rofi-rbw==1.4.2
+ruff-lsp==0.0.53
+scour==0.38.2
+setuptools==69.0.3
+six==1.16.0
+soupsieve==2.5
+tomli==2.0.1
+toolz==0.12.1
+tqdm==4.66.2
+trove-classifiers==2024.5.23
+typeguard==4.2.1
+typing_extensions==4.12.1
+ujson==5.10.0
+urllib3==1.26.18
+validate-pyproject==0.16
+websockets==12.0
+wheel==0.43.0
+yt-dlp==2024.5.27
+zstandard==0.22.0
